classDiagram
    direction LR

    class IRegistrable {
        <<interface>>
        +Guid Id
        +void Registrar()
    }

    class INotificable {
        <<interface>>
        +void EnviarNotificacion()
    }

    class Mascota {
        +Guid Id
        +string Nombre
        +string Especie
        +string Raza
        +Paciente Dueno
        +Mascota(string nombre, string especie, string raza)
        +void Registrar()
        +string ObtenerInformacion()
    }

    class Paciente {
        +Guid Id
        +string Nombre
        +string Telefono
        +string Email
        +IReadOnlyList~Mascota~ Mascotas
        +Paciente(string nombre, string telefono, string email)
        +void AgregarMascota(Mascota mascota)
        +void Registrar()
        +void EnviarNotificacion()
        +string ObtenerInformacion()
    }

    class ServicioVeterinario {
        <<abstract>>
        +DateTime Fecha
        +void Atender(Mascota mascota)*
    }

    class PacienteService {
        -List~Paciente~ pacientes
        +Task~Paciente~ RegistrarPacienteAsync(string nombre, string telefono, string email)
        +IReadOnlyList~Paciente~ ObtenerTodos()
        +Paciente BuscarPorId(Guid id)
        +Task~string~ EnviarRecordatorioCitaAsync(Guid pacienteId)
    }

    class MascotaService {
        -List~Mascota~ mascotas
        +Task~Mascota~ RegistrarMascotaAsync(string nombre, string especie, string raza, Paciente dueno)
        +IReadOnlyList~Mascota~ ObtenerTodos()
    }

    class MenuPrincipal {
        -PacienteService pacienteService
        -MascotaService mascotaService
        +Task MostrarAsync()
    }

    class Program {
        <<composition root>>
    }

    IRegistrable <|.. Mascota
    IRegistrable <|.. Paciente
    INotificable <|.. Paciente
    Paciente "1" o-- "0..*" Mascota : Mascotas
    Mascota ..> Paciente : Dueno
    ServicioVeterinario ..> Mascota : Atender()
    PacienteService --> Paciente : administra
    MascotaService --> Mascota : administra
    MenuPrincipal --> PacienteService : usa
    MenuPrincipal --> MascotaService : usa
    Program --> MenuPrincipal : crea
    Program --> PacienteService : crea
    Program --> MascotaService : crea
